# pycloudsigma

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  cloudsigma.conf  pyproject.toml  requirements.txt  setup.py
samples/: monitor_websocket_activity.py  server_bill.py  set_ssh_key.py  snapshot.py  snapshot_purge.py
src/cloudsigma/: __init__.py  bulk.py  conf.py  errors.py  generic.py  metadata.py  resource.py  resumable_upload.py  scenarios.py  upload_client.py
src/testing/: utils.py
src/testing/acceptance/: common.py  test_accounts.py  test_billing.py  test_capabilities.py  test_core.py  test_drives.py  test_firewall.py  test_host_allocation_pools.py  test_host_availability_zone.py  test_networking.py  test_profile.py  test_servers.py  test_snapshots.py  test_subscriptions.py  test_tags.py  test_upload_download.py  test_vpc.py  test_websocket.py
src/testing/templates/: __init__.py  request_template  response_template
